# SemestralnaPraca_POS

./: CMakeLists.txt  Data.cpp  Data.h  Dokumentacia_POS_Semestralna_praca_Ihring_Lapcak.docx  Figurka.cpp  Figurka.h  Hrac.cpp  Hrac.h  HraciaPlocha.cpp  HraciaPlocha.h  Kocka.cpp  Kocka.h  Makefile  Manazer.cpp  Manazer.h  Tcp_client.cpp  Tcp_client.h  Tcp_server.cpp  Tcp_server.h  ZdielaneData.cpp  ZdielaneData.h  figurka.cpp  figurka.h  hrac.cpp  hrac.h  kocka.cpp  kocka.h  main.cpp
